--- a/_config.yml
+++ b/_config.yml
@@ -32,6 +32,7 @@ defaults:
 
 sass:
   style: compressed # possible values: nested expanded compact compressed
+  quiet_deps: true  # Suppress deprecation warnings from dependencies (Bootstrap)
 
 plugins:
   - jekyll-environment-variables
