updating to reflect autism focus

--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -1,6 +1,20 @@
 main:
   - name: "Science"
     url: "/science/"
+    weight: 1
+  - name: "About"
+    url: "/about/"
+    weight: 2
+  - name: "Contact"
+    url: "/contact/"
+    weight: 3
+
+footer:
+  - name: "Home"
+    url: "/"
+    weight: 1
+  - name: "Science"
+    url: "/science/"
     weight: 2
   - name: "About"
     url: "/about/"
@@ -8,11 +22,3 @@ main:
   - name: "Contact"
     url: "/contact/"
     weight: 4
-
-footer:
-  - name: "Home"
-    url: "/"
-    weight: 1
-  - name: "Contact"
-    url: "/contact/"
-    weight: 2
